Update backend 1, end point, aturan bisnis, api